--- a/layouts/_partials/home/profile.html
+++ b/layouts/_partials/home/profile.html
@@ -1,19 +1,11 @@
 {{- $profile := .Site.Params.home.profile -}}
 <div class="home-profile">
-    {{- /* 1. 头像部分：完全原版 */ -}}
     {{- $avatar := $profile.avatarURL -}}
-    {{- with $profile.gravatarEmail -}}
-        {{- $avatar = md5 . | printf "https://www.gravatar.com/avatar/%v?s=240&d=mp" -}}
-    {{- end -}}
     {{- if $avatar -}}
         <div class="home-avatar">
             {{- $menus := $.Site.Menus.main | default slice -}}
             {{- with index $menus 0 -}}
-                {{- $url := .URL | relLangURL -}}
-                {{- with .Page -}}
-                    {{- $url = .RelPermalink -}}
-                {{- end -}}
-                <a href="{{ $url }}"{{ with .Title | default .Name }} title="{{ . }}"{{ end }}{{ if (urls.Parse $url).Host }} rel="noopener noreffer" target="_blank"{{ end }}>
+                <a href="{{ .URL | relLangURL }}">
                     {{- dict "Src" $avatar | partial "plugin/image.html" -}}
                 </a>
             {{- else -}}
@@ -22,12 +14,8 @@
         </div>
     {{- end -}}
 
-    {{- /* 2. 标题部分：完全原版 */ -}}
-    <h1 class="home-title">
-        {{- .Site.Params.home.profile.title | default .Site.Title | safeHTML -}}
-    </h1>
+    <h1 class="home-title">{{- $profile.title | default .Site.Title | safeHTML -}}</h1>
 
-    {{- /* 3. 副标题部分：完全原版 */ -}}
     {{- with $profile.subtitle -}}
         <div class="home-subtitle">
             {{- if $profile.typeit -}}
@@ -40,49 +28,23 @@
         </div>
     {{- end -}}
 
-    {{- /* 4. 社交图标部分：核心修改逻辑 */ -}}
     {{- if $profile.social -}}
         <div class="links">
             {{- $socialMap := resources.Get "data/social.yml" | transform.Unmarshal -}}
-            {{- $socialArr := slice -}}
             {{- range $key, $value := .Site.Params.social -}}
                 {{- if $value -}}
-                    {{- /* 从 data/social.yml 获取基础数据 */ -}}
-                    {{- $social := $key | lower | index $socialMap | default dict -}}
-                    
-                    {{- /* 【核心补丁】如果识别到 Wechat 且原版数据里没定义，手动指定 FontAwesome 微信图标 */ -}}
-                    {{- if and (eq ($key | lower) "wechat") (not $social.Icon) -}}
-                        {{- $social = dict "Icon" "fa-brands fa-weixin" "Title" "WeChat" | merge $social -}}
+                    {{- $keyLower := $key | lower -}}
+                    {{- $svgPath := printf "svg/%v.svg" $keyLower -}}
+                    {{- $customSvg := resources.Get $svgPath -}}
+                    {{- if $customSvg -}}
+                        <a href="{{ if reflect.IsMap $value }}{{ $value.prefix }}{{ $value.id }}{{ else }}{{ $value }}{{ end }}" title="{{ $key }}" target="_blank" rel="noopener noreffer me" class="social-icon-link">
+                            <span class="custom-icon-box {{ $keyLower }}">
+                                {{- $customSvg.Content | safeHTML -}}
+                            </span>
+                        </a>
                     {{- end -}}
-
-                    {{- /* 原作者的合并逻辑：处理 Weight, Prefix, Id 等参数 */ -}}
-                    {{- if reflect.IsMap $value -}}
-                        {{- with $value.weight }}{{ $social = dict "Weight" . | merge $social }}{{ end -}}
-                        {{- with $value.prefix }}{{ $social = dict "Prefix" . | merge $social }}{{ end -}}
-                        {{- with $value.id }}{{ $social = dict "Id" . | merge $social }}{{ end -}}
-                        {{- with $value.title }}{{ $social = dict "Title" . | merge $social }}{{ end -}}
-                        {{- with $value.icon }}{{ $social = dict "Icon" . | merge $social }}{{ end -}}
-                        {{- /* 合并整个 map 确保所有子项都存在 */ -}}
-                        {{- $social = merge $social $value -}}
-                    {{- else if ne $value true -}}
-                        {{- $social = dict "Id" $value | merge $social -}}
-                    {{- end -}}
-                    
-                    {{- $socialArr = $socialArr | append $social -}}
                 {{- end -}}
-            {{- end -}}
-            
-            {{- /* 排序渲染：微信和邮箱将完美并列 */ -}}
-            {{- range sort $socialArr "Weight" -}}
-                {{- partial "plugin/social.html" . -}}
             {{- end -}}
         </div>
     {{- end -}}
-
-    {{- with $profile.disclaimer -}}
-        <h3 class="home-disclaimer">
-            {{- . | safeHTML -}}
-        </h3>
-    {{- end -}}
 </div>
-
